# keycap

./: .gitignore  Cargo.toml
.github/workflows/: build.yml
docs/: architecture.md
src/: capture.rs  config.rs  main.rs  tray.rs
src/mode/: mod.rs
