[package]
name = "keycap"
version = "0.1.0"
edition = "2021"
description = "Cross-platform keyboard input overlay for screen recording and presentations"
license = "MIT"

[dependencies]
winit = "0.30"
tiny-skia = "0.11"
softbuffer = "0.4"
raw-window-handle = "0.6"
rdev = "0.5"
crossbeam = "0.8"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
log = { version = "0.4", features = ["std"] }

[target.'cfg(target_os = "linux")'.dependencies]
ksni = "0.1"

[target.'cfg(not(target_os = "linux"))'.dependencies]
tray-icon = "0.14"

[profile.release]
opt-level = "s"
lto = "thin"
strip = true
panic = "abort"
